Doing some code cleanup.